[package]
name = "panes"
version = "0.1.2"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["wasm", "web-programming", "gui"]
keywords = ["html", "pane", "splitview", "web"]
readme = "README.md"

[dependencies]
lazy_static = "1.4"
stdweb = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"