[package]
name = "panes"
version = "0.2.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["wasm", "web-programming", "gui"]
keywords = ["html", "pane", "splitview", "web"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlCollection",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlScriptElement",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"