[package]
name = "div"
version = "0.4.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["wasm", "web-programming", "gui"]
keywords = ["html", "pane", "splitview", "web", "svelte"]
readme = "README.md"
repository = "https://github.com/jakmeier/div-rs"
description = "Ad hoc HTML for Rust Web Apps."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CssStyleDeclaration",
    "DomTokenList",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlScriptElement",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"