[package]
name = "hello_web_sys"
version = "0.1.0"
authors = ["Jakob Meier <mail@jakobmeier.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
panes = { path = "../../" }
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlCollection",
    "Window",
    "HtmlScriptElement",
    "HtmlHeadElement",
]