[package]
name = "toggle"
version = "0.1.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
div = { path = "../../" }
wasm-bindgen = "0.2.68"
stdweb = "0.4.20"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlCollection",
    "Window",
    "HtmlScriptElement",
    "HtmlHeadElement",
]
